--- a/hw3/template.css
+++ b/hw3/template.css
@@ -26,10 +26,15 @@
 	width: 960px;
 	margin: auto;
 	border: 1px, solid, black;
+	background-color: white;
+	min-height: 900px;
 }
 
 header {
 	text-align: center;
+}
+body {
+	font-family: helvetica;
 }
 
 #inputs {
@@ -39,6 +44,9 @@ header {
 }
 
 #board {
-	padding-left: 150px;
+	width: 400px;
+	margin: auto;
+	min-height: 300px;
+	text-align: center;
 
 }
